# CoSee

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
.github/: copilot-instructions.md  graphify.md
config/: assets.yaml  settings.yaml
cosee/: __init__.py  config.py  logging_config.py
cosee/correlation/: __init__.py  engine.py
cosee/ingestion/: __init__.py  alpha_vantage.py  base.py  factory.py  yahoo_finance.py
cosee/models/: __init__.py  asset.py  correlation_result.py
cosee/processing/: __init__.py  aligner.py  cleaner.py  normalizer.py  pipeline.py
graphify-out/: .graphify_labels.json  .graphify_python  .graphify_root  GRAPH_REPORT.md  cost.json  graph.html  graph.json  manifest.json
graphify-out/2026-06-14/: .graphify_labels.json  GRAPH_REPORT.md  graph.json  manifest.json
graphify-out/cache/: stat-index.json
notebooks/: analysis.ipynb
scripts/: download_data.py  run_pipeline.py
tests/: __init__.py  test_correlation.py  test_download_data.py  test_ingestion.py  test_models.py  test_processing.py
