[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cosee"
version = "0.1.0"
description = "Correlated Asset Pair Identification Engine"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["finance", "correlation", "analytics", "markets"]
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "scipy>=1.11",
    "PyYAML>=6.0",
    "requests>=2.31",
    "pyarrow>=14.0",
]

[project.optional-dependencies]
yahoo = ["yfinance>=0.2.36"]
dev   = ["pytest>=7.4", "pytest-cov>=4.1"]

[project.scripts]
cosee-run = "scripts.run_pipeline:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts   = "-v --tb=short"

[tool.setuptools.packages.find]
where = ["."]
include = ["cosee*", "scripts*"]
